fix package name and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "amocrm-js",
-  "version": "1.0.18",
+  "name": "amocrm-js-rn",
+  "version": "1.0.19",
   "description": "JS Library for AmoCRM",
   "main": "dist/AmoCRM.js",
   "directories": {
