--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "promise-queue": "^2.2.5",
+    "react-native-xml2js": "^1.0.3",
     "qs": "^6.5.2"
   }
 }
